app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */
@import "bootstrap-sprockets";
// Import slate variables
@import "bootswatch/slate/variables";
@import "bootstrap";
// And finally bootswatch style itself
@import "bootswatch/slate/bootswatch";

.navbar {
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
}

.navbar-default {
	margin : 0 !important;
}

.footer {
  align-items: center;
  text-align: center;
  padding-bottom: 15px;
}

.checkbox_container {
  display: inline-block;
  vertical-align: -1px;
  margin: 5px;
 }

.checkbox_container input {
  display: inline;
  padding-left: 5px;
 }

.checkbox_container .collection_check_boxes{
  display: inline;
	padding-left: 2px;
 }

 .dropdown-menu > li > p {
  display: block;
  padding: 3px 20px;
  clear: both;
  font-weight: normal;
  line-height: 1.42857143;
  color: #c8c8c8;
  white-space: nowrap;
}

.nav > input {
	padding-top: 5px;
}

body {
  padding-top: 50px;
}

